--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Exo+2");
 
 body * {
-    font-family: "Exo 2",Helvetica, sans-serif;
+    font-family: "Exo 2", Helvetica, sans-serif;
 }
 
 #topNavBar {
@@ -24,9 +24,10 @@ body * {
 #mainPageBlock {
     float: left;
     display: inline-block;
-    overflow: auto;
+    overflow-y: auto;
     margin: .5em;
     padding: 0;
+    height: 80%;
 }
 
 #topNavBar * , #footer * , #leftNavBar * {
@@ -60,6 +61,12 @@ ul.navbar-nav > li > a:active {
     display: inline-block;
     text-decoration: none;
 }
+
+#mainPageBlock > div.main-container {
+    display: inline-block;
+    float: left;
+}
+
 
 #leftNavBar * {
     text-decoration: none;
@@ -98,4 +105,27 @@ ul.navbar-nav > li > a:active {
     0%      {top: 1px;left: 1px;}
     50%     {top: 2px;left: 2px;}
     100%    {top: 3px;left: 3px;}
+}
+
+td {
+    text-align: center;
+}
+
+td.number-format {
+    text-align: right;
+}
+
+span.multiple-sign{
+    font-family: Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+div.history-show-color {
+    margin: 0.1em;
+    border-radius: 0.4em;
+}
+
+table {
+    margin: 0;
+    padding-bottom: 0;
 }
